2008-02-24  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c: worked with cairo >= 1.2.0.

	* src/rb_cairo_context.c: fixed declaration position.

	* extconf.rb: RUBY_ -> RB_.

	* pkg-config.rb: implemented pkg-config for cross compiling with Wine.

2008-02-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/cairo.def, src/rb_cairo.h, src/rb_cairo_surface.c:
	Cairo::Win32PrintingSurface will work.

	* src/: supported <= 1.5.10.

2008-01-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_surface.c: used rbobj_to_nsobj() and
	ocid_to_rbobj() instead of rbobj_get_ocid() and ocobj_s_new().
	Suggested by kumura wataru. Thanks!!!

	* README: added kumura wataru to Thanks list.

	* src/rb_cairo_surface.c: fixed # of arguments for
	Cairo::Surface#mark_dirty.

	* src/rb_cairo_surface.c: improved argument error message.

	* extconf.rb: detected RubyCocoa.

2008-01-11  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: added docs task dependencies.

	* dist.sh: updated update host.

	* src/rb_cairo.c: 1.5.1 -> 1.5.2.

	* src/: Cairo::WIN32Surface -> Cairo::Win32Surface.

	* NEWS: added an entry for 1.5.1.

	* extconf.rb: added Quartz backend check for -framework RubyCocoa.

	* src/rb_cairo.h:
	- RUBY_XXX -> RB_XXX.
	- added extern "C" {}.
	- added rb_cCairo_QuartzSurface.

	* src/cairo.def: rb_cCairo_QuartzSurface.

	* src/rb_cairo_surface.c: supported Quartz backend.

2007-12-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_set_source_surface): fixed wrong type
	conversion.
	Reported by Binzo. Thanks!!!

	* README: updated Binzo entry in Thanks list.

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (cr_pop_group): fixed a memory leak bug.
	Reported by Binzo. Thanks!!!

	* README: added Binzo to Thanks list.

2007-06-14  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rb_cairo_surface.c, src/rb_cairo_private.h: used
	rb_errinfo() and RSTRING_LEN() if available for supporting ruby
	1.9. Thanks to Paul van Tilburg!!!
