@@ -1,5 +1,8 @@
 2008-02-24  Kouhei Sutou  <kou@cozmixng.org>
 
+	* pkg-config.rb: implemented --cflags-only-I.
+	* test/: added.
+
 	* src/rb_cairo_surface.c: worked with cairo >= 1.2.0.
 
 	* src/rb_cairo_context.c: fixed declaration position.
